# omg-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindBlosc.cmake
